--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^1.29.4",
+    "js-confetti": "^0.10.2",
     "svelte-preprocess": "^4.10.2"
   }
 }
